# venom_memory_rs

./: Cargo.toml  README.md  Venom-Memory-test-results.txt
docs/: ARCHITECTURE.md  USAGE.md
examples/: daemon.rs  gui_monitor.rs  multicore_test.rs  shell.rs  status_bar.rs  system_daemon.rs  ultra_test.rs
examples/venom_audio/: Makefile  audio_client.c  venom-audio-ctl  venom-audio.service
examples/venom_audio/include/: audio.h
examples/venom_audio/src/: venom_ipc.c
include/: venom_memory_rs.h
src/: bindings.rs  channel.rs  error.rs  lib.rs  mpsc_queue.rs  seqlock.rs  shm.rs
test_bindings/: c_benchmark  c_benchmark.c  c_gui_monitor  c_gui_monitor.c  c_pure_fire  c_pure_test  c_pure_test.c  c_status_bar  c_status_bar.c
venom-cli/: Cargo.toml
venom-cli/src/: library.rs  main.rs
venom-cli/src/templates/: c.rs  cpp.rs  flutter.rs  go.rs  mod.rs  nim.rs  python.rs  rust.rs  zig.rs
venom-watch/: Cargo.toml  README.md  advanced_leak_test.c  deductive_test.c  leak_test.c  loop_test.c  oop_demo  overflow_test.c  ownership_test.c  safety_test.c  test_padding.h  test_padding.rs  venom_oop_demo.c  venom_safe.h
venom-watch/src/: lib.rs  main.rs  models.rs
venom-watch/src/analysis/: engine.rs  layout.rs  mod.rs  overflow.rs
venom_audio/: README.md  audio_client  audio_client.c  install.sh  venom_audio
venom_audio/include/: venom_ipc.h
venom_audio/src/: audio.c  main.c  venom_ipc.c
